k8s/environments/uat/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: meritcap-backend-svc
  namespace: uat
spec:
  selector:
    app: meritcap-backend
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
